Cleanup in preparation for creating EE11